<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Common.Login">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:transitionName="logo_image"
        android:src="@drawable/mlogo"
        tools:targetApi="lollipop" />


    <TextView
        android:id="@+id/logo_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abril_fatface"
        android:gravity="center"
        android:padding="9dp"
        android:text="@string/tital"
        android:textColor="#F72B2B2B"
        android:textSize="35sp"
        android:transitionName="logo_text"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/slogan_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/antic"
        android:text="@string/sign_in_to_continue"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:textColor="#F72B2B2B"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="Password"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/forgetlgn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="5dp"
            android:background="#00000000"
            android:elevation="0dp"
            android:text="@string/forget_password"
            tools:ignore="RtlHardcoded"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/lgbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#FFC107"
            android:text="@string/login"
            android:textColor="#000"
            android:textStyle="bold" />

        <Button
            android:id="@+id/regbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="5dp"
            android:background="#00000000"
            android:elevation="0dp"
            android:fontFamily="@font/antic"
            android:text="@string/new_user_sign_up"
            android:textColor="#000"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/skiplogin_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Skip Login" />

    </LinearLayout>


</LinearLayout>